<resources>
    <string name="app_name">ContactsApp</string>
    <string name="name">Имя</string>
    <string name="number">Номер</string>
    <string name="email">Email</string>
    <string name="contacts">Контакты</string>
    <string name="profile">Профиль</string>
    <string name="avatar">Аватар</string>
    <string name="birthday">День рождения</string>
    <string name="notification">Напоминание</string>
    <string name="channel_name">Напоминание о дне рождения</string>
    <string name="notification_message">Сегодня день рождения у</string>
    <string name="permission_rationale">Приложение не будет работать без разрешения на чтение контактов</string>
    <string name="permission_denied">Необходимо разрешение на чтение контактов!</string>
    <string name="search_title">Поиск контактов…</string>
    <string name="search_hint">Имя контакта…</string>
    <string name="no_birthday">Не установлена дата рождения</string>
</resources>
