<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/space_horizontal_small"
    android:paddingTop="@dimen/space_vertical_small"
    android:paddingRight="@dimen/space_horizontal_small"
    tools:context=".presentation.ui.fragments.contact_details.ContactDetailsFragment">

    <include
        android:id="@+id/progressBar"
        layout="@layout/progressbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/contactDetailsAvatarImage"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactDetailsNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_horizontal_small"
        android:layout_marginLeft="@dimen/space_horizontal_small"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contactDetailsAvatarImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactDetailsBirthdayText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_horizontal_small"
        android:layout_marginLeft="@dimen/space_horizontal_small"
        android:text="@string/birthday"
        app:layout_constraintBottom_toBottomOf="@id/contactDetailsAvatarImage"
        app:layout_constraintStart_toEndOf="@id/contactDetailsAvatarImage"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsNameText" />

    <Switch
        android:id="@+id/birthdayNotificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        app:layout_constraintBottom_toBottomOf="@id/contactDetailsAvatarImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contactDetailsBirthdayText"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsNameText" />

    <TextView
        android:id="@+id/contactDetailsNumber1Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        android:text="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsAvatarImage" />

    <TextView
        android:id="@+id/contactDetailsNumber2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsNumber1Text" />

    <TextView
        android:id="@+id/contactDetailsEmail1Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsNumber2Text" />

    <TextView
        android:id="@+id/contactDetailsEmail2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsEmail1Text" />

    <TextView
        android:id="@+id/contactDetailsDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsEmail2Text" />
</androidx.constraintlayout.widget.ConstraintLayout>
